--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
 
 .main {
   margin-top: 60px;
+  min-height: 700px;
 }
 
 section {
@@ -57,6 +58,10 @@ a:visited {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+}
+
+ul {
+  margin: 0;
 }
 
 li {
@@ -113,7 +118,14 @@ nav a:hover {
 }
 
 footer {
+  background-color: #000000;
+  padding: 20px;
   padding-bottom: 100px;
+}
+
+footer p {
+  color: #999;
+  width: 400px;
 }
 
 .warn * {
