--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,16 @@
   border: 0;
   font: inherit;
   vertical-align: baseline;
-  color: #fff;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  color: #666;
+}
+
+body {
+  background-color: #141e32;
 }
 
 .main {
@@ -12,14 +21,25 @@
   min-height: 700px;
 }
 
-section {
+section,
+.section {
   width: 800px;
   margin: auto;
   padding: 10px;
 }
 
-section.full-width {
+section.full-width,
+.section.full-width {
   width: 96%;
+}
+
+h1,
+h2,
+h3,
+h4,
+li,
+span {
+  color: #fff;
 }
 
 h1,
@@ -46,9 +66,24 @@ h4 {
   line-height: 20px;
 }
 
+p,
+a,
+a:visited {
+  color: #ffffff;
+}
+
 p {
   margin-block-start: 0px;
   margin-block-end: 16px;
+}
+
+.gridjs a {
+  color: #333333;
+}
+
+th.gridjs-th,
+.gridjs-td {
+  color: black !important;
 }
 
 select {
@@ -87,6 +122,7 @@ img {
 }
 
 nav {
+  background-color: #101010;
   display: flex;
   position: fixed;
   flex: 1 0 auto;
