--- a/src/style.css
+++ b/src/style.css
@@ -220,3 +220,27 @@ table a:visited {
 table a:hover {
   text-decoration: underline;
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+    width: 100%;
+  }
+
+  .main {
+    margin-top: 60px;
+    min-height: 700px;
+  }
+
+  section,
+  .section {
+    width: 100%;
+    padding: 40px;
+  }
+
+  footer {
+    width: 90%;
+    padding: 0;
+    margin: auto;
+    padding-bottom: 100px;
+  }
+}
