--- a/src/style.css
+++ b/src/style.css
@@ -161,6 +161,10 @@ nav a:hover {
   text-decoration: underline;
 }
 
+nav a.active {
+  text-decoration: underline;
+}
+
 .tab .tablinks {
   background-color: #1a2640;
   cursor: pointer;
@@ -180,6 +184,7 @@ nav a:hover {
 }
 
 footer {
+  clear: both;
   background-color: #000000;
   padding: 20px;
   padding-bottom: 100px;
@@ -220,11 +225,90 @@ table a:hover {
   text-decoration: underline;
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #141e32;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close-modal {
+  color: #aaaaaa;
+  float: right;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px;
+}
+
+.close-modal:hover,
+.close-modal:focus {
+  color: #fff;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.compare-img {
+  border: 1px solid #333;
+  object-fit: contain;
+  width: 100%;
+  height: 200px;
+}
+
+.compare-img:hover {
+  border: 1px solid white;
+  cursor: pointer;
+}
+
+.compare-wrapper h2 {
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+}
+
+.compare-wrapper a {
+  text-decoration: none;
+}
+
+.compare-wrapper a:hover {
+  text-decoration: underline;
+}
+
+@media only screen and (max-width: 2000px) {
+  .compare-wrapper {
+    width: 200px;
+    margin: 10px;
+    float: left;
+    text-align: center;
+  }
+}
+
 @media only screen and (max-width: 800px) {
   section,
   .section {
     width: 100%;
     padding: 20px;
+  }
+
+  .compare-wrapper {
+    width: 30%;
+    margin: 10px;
+    float: left;
+    text-align: center;
   }
 
   footer {
