--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,9 @@ body {
 }
 
 .main {
-  margin-top: 100px;
+  margin-top: 60px;
+  margin-bottom: 200px;
+  padding-top: 50px;
   min-height: 700px;
 }
 
@@ -91,6 +93,22 @@ select {
   border-radius: 4px;
   padding: 4px;
   color: #333;
+}
+
+.button {
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  padding: 4px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #aaa;
+  background-color: #141e32;
+}
+
+.button:hover {
+  color: #fff;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 p,
@@ -316,4 +334,10 @@ table a:hover {
     padding: 20px;
     padding-bottom: 100px;
   }
+}
+
+#page-map {
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
 }
